[package]
name = "dihardts_omicstools"
version = "1.5.0"
edition = "2021"
readme = "Readme.md"
description = "Collection of different omic tools, structs and enums."
repository = "https://github.com/di-hardt/omicstools.git"
homepage = "https://github.com/di-hardt/omicstools.git"
documentation = "https://github.com/di-hardt/omicstools.git"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.72"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
sha1 = "0.10.6"

[build-dependencies]
anyhow = "1.0.72"
askama = "0.12.0"
csv = "1.2.2"
