[package]
name = "dihardts_omicstools"
version = "1.6.0"
edition = "2021"
readme = "Readme.md"
description = "Collection of different omic tools, structs and enums."
repository = "https://github.com/di-hardt/omicstools.git"
homepage = "https://github.com/di-hardt/omicstools.git"
documentation = "https://github.com/di-hardt/omicstools.git"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.5"
flate2 = { version = "1.0.28", features = ["zlib"] }
quick-xml = "0.31.0"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
sha1 = "0.10.6"

[build-dependencies]
anyhow = "1.0.72"
askama = "0.12.0"
csv = "1.2.2"
