[package]
name = "dihardts_omicstools"
version = "2.0.0"
edition = "2021"
readme = "Readme.md"
description = "Collection of different omic tools, structs and enums."
repository = "https://github.com/di-hardt/omicstools.git"
homepage = "https://github.com/di-hardt/omicstools.git"
documentation = "https://github.com/di-hardt/omicstools.git"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.5"
csv = "1.2.2"
fallible-iterator = "0.3.0"
fancy-regex = "0.12.0"
flate2 = { version = "1.0.28", features = ["zlib"] }
lazy_static = "1.4.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
quick-xml = "0.31.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha1 = "0.10.6"
zip = "0.6.6"

[build-dependencies]
anyhow = "1.0.72"
askama = "0.12.0"
csv = "1.2.2"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
